[project]
name = "PlanQ"
version = "0.1.9"
description = "Transport-agnostic async task queue using JSON-RPC 2.0"
authors = [
    { name = "Dmitrii Azarenko", email = "1531255+dvazar@users.noreply.github.com" },
]
maintainers = [
    { name = "Dmitrii Azarenko", email = "1531255+dvazar@users.noreply.github.com" },
]
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.12"
keywords = ["task", "queue", "messaging", "asyncio", "jsonrpc", "distributed"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Framework :: AsyncIO",
    "Framework :: Django",
    "Topic :: System :: Distributed Computing",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pydantic>=2.0,<3",
]

[project.urls]
Homepage = "https://github.com/dvazar/planq"
Repository = "https://github.com/dvazar/planq"
Issues = "https://github.com/dvazar/planq/issues"

[project.optional-dependencies]
dev = [
    "ruff>=0.15.1",
]

sqs = ["aiobotocore>=2.0"]
redis = ["redis[hiredis]>=5.0"]
django = ["django>=5.0"]

testing = [
    "pytest>=8.0",
    "pytest-asyncio>=1.3",
    "pytest-cov>=4.0",
    "pytest-django>=4.0",
    "hypothesis>=6.0",
    "time-machine>=3.2",
    "dacite>=1.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/planq"]

[tool.hatch.build.targets.sdist]
include = [
    "src/planq",
    "README.md",
]

[tool.ruff]
exclude = [
    ".git",
    ".github",
    ".git-rewrite",
    ".mypy_cache",
    ".env",
    "__pycache__",
    "__pypackages__",
    ".ruff_cache",
    ".tox",
    ".venv",
    ".vscode",
    "docs",
]

line-length = 80
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203"]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "hypothesis: Property-based tests using hypothesis",
    "integration: Integration tests requiring external services",
]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]

[tool.coverage.run]
branch = true
source = ["planq"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
]
fail_under = 100
